@@ -1,3 +1,14 @@
+2021-04-08  Aakash Jain  <aakash_jain@apple.com>
+
+        EWS should keep working when Bugzilla is down
+        https://bugs.webkit.org/show_bug.cgi?id=224336
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps.py:
+        (BugzillaMixin.get_patch_json):
+        (BugzillaMixin.get_bug_json):
+
 2021-04-08  Adam Roben  <aroben@apple.com>
 
         prepare-ChangeLog fails to find deleted functions in files with spaces in their path in Git repositories
